<resources>
    <string name="textitulo">Datos Personales</string>
    <string name="app_name">MinimarketApp</string>
    <string name="valtitulo">Registro Clientes</string>
    <string name="valetnombre">Ingrese su nombre</string>
    <string name="valetapellido">Ingrese su apellido</string>
    <string name="valtemail">Ingrese su Correo Electronico</string>
    <string name="valetTelefono">Ingrese su numero de Celular</string>
    <string name="valetFechaNacimiento">Ingrese su fecha de Nacimiento</string>
    <string name="valetContraseña">Ingrese su nueva Contraseña</string>
    <string name="valbtnRegistrar">Registrarse</string>
    <string name="etCorreo">Ingrese su Correo Electronico</string>
    <string name="etCelular">Ingrese su numero de Celular</string>
    <string name="etDireccion">Ingrese su Dirección</string>
    <string name="etContrasena">Ingrese su Contraseña</string>
    <string name="etNombre">Ingrese su Nombre</string>
    <string name="editdireccion">Los carmenes 123</string>
    <string name="editnombre">Mariano Valentin</string>
    <string name="editapellido">Velasco Alvarado</string>
    <string name="edittelefono">923649802</string>
    <string name="editcontrasena">contra123</string>
    <string name="texNombre">Nombre:</string>
    <string name="texApellido">Apellido:</string>
    <string name="texgmail">Correo:</string>
    <string name="textelefono">Telefono:</string>
    <string name="textdireccion">Direccion:</string>
    <string name="texcontraseña">Contraseña:</string>
    <string name="texNombreTXT">--</string>
    <string name="texApellidoTXT">--</string>
    <string name="texgmailTXT">--</string>
    <string name="textelefonoTXT">--</string>
    <string name="textdireccionTXT">--</string>
    <string name="texcontraseñaTXT">--</string>
    <string name="textcarrito">Carrito de Compra</string>
    <string name="texgenero">Genero:</string>
    <string name="texProducto">Producto:</string>
    <string name="texProductoTXT">Papa</string>
    <string name="texPrecio">Precio:</string>
    <string name="texPrecioTXT">2.50</string>
    <string name="texPrecioTXT1">2.00</string>
    <string name="texDescripcion">Descripcion:</string>
    <string name="texDescripcionTXT">Amarilla</string>
    <string name="btnaceptar">Actualizar Datos</string>
    <string name="btncancelar">Cambiar Contraseña</string>
    <string name="btnrealizarcompra">Realizar Compra</string>
    <string name="btncancelarcompra">Cancelar Compra</string>
    <string name="btnmenos">-</string>
    <string name="btnmas">+</string>
    <string name="btnhombre">Hombre</string>
    <string name="btnmujer">Mujer</string>
    <string name="btnotro">Otro</string>
    <string name="rbhombre">Hombre</string>
    <string name="rbmujer">Mujer</string>
    <string name="rbotro">Otro</string>
    <string name="btnclick"><![CDATA[<-]]></string>
    <string name="btnClik" />
    <string name="btnflecha">flecha</string>
    <string name="tvlogo">Minimarket Idat</string>
    <string name="tvtitulologin">MINIMARKET LOGIN</string>
    <string name="mnk_button_cancelar">Cancelar</string>
    <string name="mnk_button_next">Siguiente</string>
    <string name="mnk_hint_usuario">Usuario</string>
    <string name="mnk_hint_contrasena">Contraseña</string>
    <string name="vlbienvenido">Bienvenido!</string>
    <string name="vlnice">Encantado de verte de nuevo!</string>
    <string name="btnlogin">Iniciar sesión</string>
    <string name="vlmiembro">No estás registrado?</string>
    <string name="register">Regístrese</string>
    <string name="fresas_titulo">Fresas 500gr</string>
    <string name="fresas_precio">S/ 9.56</string>
    <string name="camotes_titulo">Camote amarrillo 1k</string>
    <string name="camotes_precio">S/ 2.69</string>
    <string name="aradanos_titulo">Arándanos 250gr</string>
    <string name="arandanos_precio">S/ 7.88</string>
    <string name="arroz_titulo">Arroz Costeño 750gr</string>
    <string name="arroz_precio">S/ 3.50</string>
    <string name="harina_titulo">Harina Blanca Flor 1k</string>
    <string name="harina_precio">S/ 6.99</string>
    <string name="sal_titulo">Sal Marina 1k</string>
    <string name="sal_precio">S/ 1.89</string>
    <string name="mayonesa_titulo">Mayonesa Alacena 95g</string>
    <string name="mayonesa_precio">S/ 13.22</string>
    <string name="fideos_titulo">Fideo Don Vittorio 500gr</string>
    <string name="fideos_precio">S/ 2.89</string>
    <string name="gelatina_titulo">Gelatina Universal 75gr</string>
    <string name="gelatina_precio">S/ 2.20</string>
    <string name="guarana_titulo">Guaraná 3L</string>
    <string name="guarana_precio">S/ 7.00</string>
    <string name="papaslays_titulo">Papas fritas Lays 85gr</string>
    <string name="papaslays_precio">S/ 4.10</string>
    <string name="globopop_titulo">Globo Pop Led Print</string>
    <string name="globopop_precio">S/ 1.00</string>
    <string name="usuario">Pepe El Grillo</string>
    <string name="calificar">Califica este producto</string>
    <string name="respuesta">Dejar respuesta</string>
    <string name="enviar">Enviar</string>
    <string name="escribe_reseñas">Escribe tus reseñas...</string>
    <string name="mnk_filter_title">Filtrar</string>
    <string name="mnk_search_title">Buscar</string>
    <string name="imgFondo">imagenDeFondo</string>
    <string name="mnk_producto_titulo">Titulo</string>
    <string name="mnk_product_description">Descripcion</string>
    <string name="valvermas">Ver</string>
    <string name="btnircarrito">Ir al carrito</string>
    <string name="valcomentario">Comentarios</string>

</resources>