<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="312dp"
            android:background="@drawable/fondo"
            android:contentDescription="@string/imgFondo" />

        <TextView
            android:id="@+id/tvtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:padding="5dp"
            android:text="@string/tvtitulologin"
            android:textAppearance="@style/TextAppearance.Minimarket.Title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input"
            style="@style/Widget.Minimarket.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mnk_hint_usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            style="@style/Widget.Minimarket.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mnk_hint_contrasena"
            app:errorEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next_button"
                style="@style/Widget.Minimarket.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:onClick="nextButton"
                android:text="@string/mnk_button_next" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_toStartOf="@id/btn_next_button"
                android:layout_toLeftOf="@id/btn_next_button"
                android:text="@string/mnk_button_cancelar" />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>