<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".DetailsActivity">



    <TextView
        android:id="@+id/tvdetalletitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mnk_producto_titulo"
        android:textAppearance="@style/TextAppearance.Minimarket.Title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvdetalledescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="@string/mnk_product_description"
        android:textAppearance="@style/TextAppearance.Minimarket.Title"
        app:layout_constraintTop_toBottomOf="@+id/tvdetalletitulo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="nextButton"
        android:text="@string/btnircarrito"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvdetalledescripcion"
        app:layout_constraintVertical_bias="0.503" />

    <Button
        android:id="@+id/btncomentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="comentarioButton"
        android:text="@string/valcomentario"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</androidx.constraintlayout.widget.ConstraintLayout>